syntax = "proto3";


package patient;

//initialisation of service
service PatientService {
  //initialisation of rpc method
  rpc addNewPatient(stream PatientRequest) returns (PatientResponse) {}
}

message PatientRequest {
  string name = 1;
  string dob = 2;
  string phone = 3;
  string address = 4;
}

message PatientResponse {
  string message = 1;
  int32 numOfPatientsAdded = 2;
}
